# qwc-postgres-fts-service

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  search_service.py  setup.cfg  test.py
.github/workflows/: lint.yml  publish.yml
requirements/: development.txt  requirements.txt
schemas/: qwc-postgres-fts-service.json
src/: search_service.py  server.py  server.wsgi
