[project]
name = "qwc-postgres-fts-service"
version = "v2025.11.05"
description = "QWC Postgres Fulltext Search Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask~=3.0.0",
    "flask-restx~=1.3.0",
    "Flask-JWT-Extended~=4.6.0",
    "SQLAlchemy~=2.0.29",
    "psycopg2~=2.9.9",
    "requests~=2.32.0",
    "qwc-services-core~=1.4.0"
]

[dependency-groups]
dev = [
    "python-dotenv>=1.2.1",
]
